--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,54 @@
-<p>footer works!</p>
+<!-- Newsletter Section -->
+<!-- Newsletter Section -->
+<section class="newsletter-section py-4 bg-light position-relative overflow-hidden">
+	<svg class="position-absolute" viewBox="0 0 1200 100" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+	  <path d="M0,0 C300,50 900,50 1200,0 L1200,100 L0,100 Z" fill="#f8f9fa"></path>
+	</svg>
+	<div class="container text-center position-relative">
+	  <h2>Subscribe to Our Newsletter</h2>
+	  <p>Get the latest updates and offers.</p>
+	  <form >
+		<div class="input-group mx-auto" style="max-width: 600px;">
+		  <input type="email" class="form-control" placeholder="Enter your email" required>
+		  <button class="btn btn-primary" type="submit">Subscribe</button>
+		</div>
+	  </form>
+	</div>
+  </section>
+  
+  
+  <!-- Footer Section -->
+ <!-- Footer Section -->
+<footer class="footer bg-dark text-white py-4 position-relative overflow-hidden">
+	<svg class="position-absolute" viewBox="0 0 1200 100" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+	  <path d="M0,50 L100,20 L200,50 L300,30 L400,50 L500,30 L600,50 L700,20 L800,50 L900,30 L1000,50 L1100,20 L1200,50 L1200,100 L0,100 Z" fill="#343a40"></path>
+	</svg>
+	<div class="container position-relative">
+	  <div class="row d-flex justify-content-around">
+		<!-- Column 1 -->
+		<div class="col-md-4 mb-3 text-center">
+		  <h5>About Us</h5>
+		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+		<!-- Column 2 -->
+		<div class="col-md-4 mb-3 text-center">
+		  <h5>Quick Links</h5>
+		  <ul class="list-unstyled">
+			<li><a href="#" class="text-white">Home</a></li>
+			<li><a href="#" class="text-white">About</a></li>
+			<li><a href="#" class="text-white">Services</a></li>
+			<li><a href="#" class="text-white">Contact</a></li>
+		  </ul>
+		</div>
+		<!-- Column 3 -->
+		<div class="col-md-4 mb-3 text-center">
+		  <h5>Contact Us</h5>
+		  <p>
+			Address: 1234 Street Name, City, Country<br>
+			Phone: (123) 456-7890<br>
+		  </p>
+		</div>
+	  </div>
+	</div>
+  </footer>
+  
