--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,6 @@
 	</div>
   </div>
   
-  
    <app-homepackage></app-homepackage>
    <section class="traveler-connect py-5">
 	<div class="container threecards">
@@ -56,3 +55,4 @@
 	  </div>
 	</div>
   </section>
+  <app-popularcarousel></app-popularcarousel>
