--- a/src/app/components/homecarousel/homecarousel.component.html
+++ b/src/app/components/homecarousel/homecarousel.component.html
@@ -1,49 +1,24 @@
-
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
 	<div class="carousel-inner">
-	  <div class="carousel-item active" [@slideIn]="carouselIndex">
-		<div class="container">
-			<div class="row">
-			  <div class="col-md-4">
-				<div class="card">
-				  <img src="assets/zanzibar.jpg" class="card-img-top" alt="Zanzibar">
-				  <div class="card-body">
-					<h5 class="card-title">ZANZIBAR</h5>
-				  </div>
-				</div>
-			  </div>
-			  <div class="col-md-4">
-				<div class="card">
-				  <img src="assets/morocco.jpg" class="card-img-top" alt="Morocco">
-				  <div class="card-body">
-					<h5 class="card-title">MOROCCO</h5>
-				  </div>
-				</div>
-			  </div>
-			  <div class="col-md-4">
-				<div class="card">
-				  <img src="assets/madagascar.jpg" class="card-img-top" alt="Madagascar">
-				  <div class="card-body">
-					<h5 class="card-title">MADAGASCAR</h5>
-				  </div>
+	  <div class="carousel-item active">
+		<div class="container-fluid">
+		  <div class="row no-gutters" [@slideInStagger]="destinations.length">
+			<div class="col-md-4" *ngFor="let destination of destinations">
+			  <div class="card">
+				<img [src]="destination.image" class="card-img-top" [alt]="destination.title">
+				<div class="card-body">
+				  <h5 class="card-title">{{ destination.title }}</h5>
 				</div>
 			  </div>
 			</div>
-		  </div>		<div class="carousel-caption d-none d-md-block">
-		
+		  </div>
 		</div>
 	  </div>
-	  <div class="carousel-item" [@slideIn]="carouselIndex">
+	  <div class="carousel-item">
 		<img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
-		<div class="carousel-caption d-none d-md-block">
-		  
-		</div>
 	  </div>
-	  <div class="carousel-item" [@slideIn]="carouselIndex">
+	  <div class="carousel-item">
 		<img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
-		<div class="carousel-caption d-none d-md-block">
-		 
-		</div>
 	  </div>
 	</div>
 	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
