--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -55,4 +55,7 @@
 	  </div>
 	</div>
   </section>
+  <div class="container">
+	hii how are you i am good
+  </div>
   <app-popularcarousel></app-popularcarousel>
