--- a/src/app/components/homecarousel/homecarousel.component.html
+++ b/src/app/components/homecarousel/homecarousel.component.html
@@ -1,33 +1,34 @@
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-	<div class="carousel-inner">
-	  <div class="carousel-item active">
-		<div class="container-fluid">
-		  <div class="row no-gutters" [@slideInStagger]="destinations.length">
-			<div class="col-md-4" *ngFor="let destination of destinations">
-			  <div class="card">
-				<img [src]="destination.image" class="card-img-top" [alt]="destination.title">
-				<div class="card-body">
-				  <h5 class="card-title">{{ destination.title }}</h5>
-				</div>
-			  </div>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	  <div class="carousel-item">
-		<img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
-	  </div>
-	</div>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Next</span>
-	</button>
-  </div>
-  
+    <div class="carousel-inner">
+        <!-- First Slide: Three Destinations -->
+        <div class="carousel-item active">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                    <div class="col-md-4" *ngFor="let destination of destinations">
+                        <div class="card">
+                            <video [src]="destination.video" class="card-img-top" controls></video>
+                            <div class="card-body">
+                                <h5 class="card-title">{{ destination.title }}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Other Slides -->
+        <div class="carousel-item">
+            <video src="../../../assets/images/TOUR EXPERTS.mp4" class="d-block w-100" controls></video>
+        </div>
+        <div class="carousel-item">
+            <video src="https://via.placeholder.com/1200x600" class="d-block w-100" controls></video>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
