--- a/src/app/components/destination/destination.component.html
+++ b/src/app/components/destination/destination.component.html
@@ -21,19 +21,28 @@
 
 <hr />
 
-<!-- Display packages as cards or list items -->
-<div class="container-fluid">
+<!-- Display packages as cards -->
+<div class="container">
   <div class="row">
-    <div class="col-md-4" *ngFor="let pkg of filteredPackages">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let pkg of filteredPackages">
       <div class="card" [routerLink]="['/package', pkg.id]">
         <img src="{{ pkg.imageUrl }}" class="card-img-top" alt="{{ pkg.packagename }}">
-        <div class="card-body">
+
+        <div class="card-body d-flex flex-column">
+          <div class="d-flex justify-content-between mb-2">
+            <div class="d-flex align-items-center">
+              <p class="card-text mb-0"><small class="text-muted">{{ pkg.location }}, {{ pkg.country }}</small></p>
+            </div>
+            <div class="d-flex align-items-center">
+              <p class="card-text mb-0"><strong>{{ pkg.tourtype }}</strong></p>
+            </div>
+          </div>
           <h5 class="card-title">{{ pkg.packagename }}</h5>
-          <p class="card-text">{{ pkg.description }}</p>
-          <p class="card-text"><small class="text-muted">{{ pkg.location }}, {{ pkg.country }}</small></p>
+          <p class="card-text">
+            <small class="text-muted">{{ pkg.duration }}</small>
+          </p>
         </div>
       </div>
     </div>
   </div>
 </div>
-
