--- a/src/app/components/destination/destination.component.scss
+++ b/src/app/components/destination/destination.component.scss
@@ -175,3 +175,8 @@
 .card:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
 }
+.card-img-top {
+  object-fit: fill; /* Ensures the image covers the container without distortion */
+  height: 200px; /* Adjust this value as needed */
+  width: 100%; /* Makes sure the image stretches to the full width of the card */
+}
