--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,8 +13,8 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav mx-auto gap-3">
-                    <li class="nav-item">
-                        <a class="nav-link" (click)="navigateAndCloseOffcanvas('')">Home</a>
+                    <li class="nav-item  ">
+                        <a class="nav-link eb-garamond" (click)="navigateAndCloseOffcanvas('')">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" (click)="navigateAndCloseOffcanvas('/about')">Company</a>
